# physical-ai-and-humaniod-robotics-book

./: docusaurus.config.ts
book-content/: navigation.md
book-content/docs/01-intro/: index.md
book-content/docs/02-ros2-basics/: index.md
book-content/docs/03-simulation/: index.md
book-content/docs/04-isaac-sim/: index.md
book-content/docs/05-vla-integration/: index.md
book-content/docs/06-capstone/: index.md
book-content/examples/src/: test_code_examples.py  test_environment.py  test_ros2_nodes.py  verify_install.py
book-content/examples/src/my_robot_description/: package.xml
book-content/examples/src/my_robot_description/launch/: spawn_robot.launch.py
book-content/examples/src/my_robot_description/urdf/: robot.urdf
docs/01-intro/: index.md
docs/02-ros2-basics/: index.md
docs/03-simulation/: index.md
docs/04-isaac-sim/: index.md
docs/05-vla-integration/: index.md
docs/06-capstone/: index.md
docs/06-capstone/assets/: architecture_diagram.mermaid
docs/06-capstone/code/: main_agent.py
history/prompts/001-physical-ai-book/: 0001-spec-physical-ai-book.spec.prompt.md  0002-plan-physical-ai-book.plan.prompt.md  0003-tasks-physical-ai-book.tasks.prompt.md  0004-impl-physical-ai-book-tests.green.prompt.md  0005-implement-physical-ai-book-content.green.prompt.md  0006-implement-comprehensive-tests.green.prompt.md
history/prompts/constitution/: 0001-create-book-constitution.constitution.prompt.md
specs/001-physical-ai-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+8 files in other folders)
